--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/DAIAD/home-web.git"
   },
   "dependencies": {
+    "babel-polyfill": "^6.16.0",
     "classnames": "^2.2.3",
     "clone": "~1.0.2",
     "echarts": "3.1.10",
@@ -39,6 +40,7 @@
     "react-leaflet-wrapper": "https://github.com/smanousopoulos/react-leaflet-wrapper-temp.git",
     "redux": "~3.3.1",
     "redux-thunk": "~1.0.3",
+    "redux-logger": "^2.5.2",
     "sprintf": "^0.1.5",
     "font-awesome": "~4.6.3",
     "react-dropzone": "^3.3.4"
@@ -55,7 +57,6 @@
     "babel-plugin-react-intl": "~2.2.0",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-regenerator": "~6.16.1",
-    "babel-polyfill": "~6.16.0",
     "babel-preset-latest": "~6.16.0",
     "babel-preset-react": "~v6.16.0",
     "babel-preset-stage-2": "~6.17.0",
@@ -63,8 +64,11 @@
     "browserify": "~13.0.0",
     "browserify-shim": "~3.8.12",
     "envify": "~3.4.0",
-    "eslint-plugin-react": "~6.4.1",
-    "eslintify": "^3.1.0",
+    "eslint-config-airbnb": "13.0.0",
+    "eslint-plugin-import": "2.1.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "6.6.0",
+    "eslintify": "3.1.0",
     "grunt": "~0.4.5",
     "grunt-apidoc": "~0.11.0",
     "grunt-browserify": "~4.0.1",
@@ -78,7 +82,6 @@
     "grunt-jsdoc": "^2.1.0",
     "grunt-sync": "~0.5.1",
     "livereactload": "^3.0.0",
-    "redux-logger": "^2.5.2",
     "react-proxy": "^1.1.8"
   },
   "babelify": {
