--- a/configuration/config/application-testing.properties
+++ b/configuration/config/application-testing.properties
@@ -5,20 +5,20 @@ server.port = 8081
 server.login.force-https = false
 
 # Flyway
-#flyway.enabled = false
+flyway.enabled = false
 daiad.flyway.baseline-version=1_0_0
 daiad.manager.flyway.baseline-version=1_0_0
 
 # Data source configuration
 datasource.default.driver-class-name = org.postgresql.Driver
-datasource.default.url = jdbc:postgresql://localhost:5432/daiad
-datasource.default.username = daiad
-datasource.default.password = 
+datasource.default.url = jdbc:postgresql://localhost:5432/daiad-test
+datasource.default.username =
+datasource.default.password =
 
 datasource.management.driver-class-name = org.postgresql.Driver
-datasource.management.url = jdbc:postgresql://localhost:5432/daiad-manager
-datasource.management.username = daiad
-datasource.management.password = 
+datasource.management.url = jdbc:postgresql://localhost:5432/daiad-manager-test
+datasource.management.username =
+datasource.management.password =
 
 spring.jpa.properties.hibernate.show_sql = false
 spring.jpa.properties.hibernate.format_sql = false
