--- a/package.json
+++ b/package.json
@@ -45,7 +45,11 @@
     "redux-logger": "^2.5.2",
     "sprintf": "^0.1.5",
     "font-awesome": "~4.6.3",
-    "react-dropzone": "^3.3.4"
+    "react-dropzone": "^3.3.4",
+    "chroma-js": "1.2.1",
+    "leaflet": "1.0.2",
+    "leaflet-draw": "0.4.4",
+    "leaflet.heat": "0.2.0"
   },
   "scripts": {
     "build": "NODE_ENV=production grunt build",
