--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redux": "~3.3.1",
     "redux-thunk": "~1.0.3",
     "redux-logger": "^2.5.2",
+    "redux-debounced": "^0.4.0",
     "sprintf": "^0.1.5",
     "font-awesome": "~4.6.3",
     "react-dropzone": "^3.3.4",
