--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-bootstrap-daterangepicker": "~1.0.6",
     "react-checkbox-group": "~1.0.4",
     "react-controls": "git+https://github.com/DAIAD/react-controls.git#master",
-    "react-datetime": "git+https://github.com/YouCanBookMe/react-datetime.git#master",
+    "react-datetime": "2.8.10",
     "react-dom": "~0.14.6",
     "react-echarts": "git+https://github.com/DAIAD/react-echarts.git#master",
     "react-google-recaptcha": "^0.5.4",
