--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
+    "chroma-js": "1.2.1",
     "classnames": "^2.2.3",
     "clone": "~1.0.2",
     "echarts": "3.1.10",
     "es6-promise": "~3.0.2",
+    "font-awesome": "~4.6.3",
     "history": "~2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
     "keymirror": "~0.1.1",
+    "leaflet": "1.0.2",
+    "leaflet-draw": "0.4.4",
+    "leaflet.heat": "0.2.0",
     "lodash": "~4.0.1",
     "moment": "^2.16.0",
     "moment-timezone": "^0.5.4",
@@ -25,34 +30,28 @@
     "react-bootstrap": "^0.28.2",
     "react-bootstrap-daterangepicker": "~1.0.6",
     "react-checkbox-group": "~1.0.4",
-    "react-controls": "git+https://github.com/DAIAD/react-controls.git#master",
     "react-datetime": "2.8.10",
     "react-dom": "~0.14.6",
-    "react-echarts": "git+https://github.com/DAIAD/react-echarts.git#master",
-    "react-google-recaptcha": "^0.5.4",
+    "react-dropzone": "^3.3.4",
+    "react-echarts": "git+https://github.com/DAIAD/react-echarts.git#v1.0",
     "react-ga": "^2.2.0",
+    "react-google-recaptcha": "^0.5.4",
     "react-grid-layout": "^0.13.9",
+    "react-infinite-scroller": "1.0.4",
     "react-intl": "~2.0.0-rc-1",
+    "react-leaflet-wrapper": "https://github.com/DAIAD/react-leaflet-wrapper.git#v1.0",
     "react-redux": "~4.4.0",
     "react-router": "~2.0.0",
     "react-router-bootstrap": "~0.20.1",
     "react-router-redux": "4.0.0",
     "react-scroll-up": "~1.1.2",
-    "react-select": "~1.0.0-beta9",
-    "react-wiz": "git+https://github.com/DAIAD/react-wizard.git#master",
-    "react-leaflet-wrapper": "https://github.com/DAIAD/react-leaflet-wrapper.git",
-    "chroma-js": "1.2.1",
-    "leaflet": "1.0.2",
-    "leaflet-draw": "0.4.4",
-    "leaflet.heat": "0.2.0",
+    "react-select": "1.2.1",
+    "react-wiz": "git+https://github.com/DAIAD/react-wizard.git#v1.0",
     "redux": "~3.3.1",
-    "redux-thunk": "~1.0.3",
-    "redux-logger": "^2.5.2",
     "redux-debounced": "^0.4.0",
-    "sprintf": "^0.1.5",
-    "font-awesome": "~4.6.3",
-    "react-dropzone": "^3.3.4",
-    "react-infinite-scroller": "1.0.4"
+    "redux-logger": "^2.5.2",
+    "redux-thunk": "~1.0.3",
+    "sprintf": "^0.1.5"
   },
   "scripts": {
     "build": "NODE_ENV=production grunt build",
