--- a/pom.xml
+++ b/pom.xml
@@ -485,6 +485,50 @@
 
         </plugins>
 
+    <pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.m2e</groupId>
+                <artifactId>lifecycle-mapping</artifactId>
+                <version>1.0.0</version>
+                <configuration>
+                    <lifecycleMappingMetadata>
+                        <pluginExecutions>
+                            <pluginExecution>
+                                <pluginExecutionFilter>
+                                    <groupId>com.github.eirslett</groupId>
+                                    <artifactId>frontend-maven-plugin</artifactId>
+                                    <versionRange>[0.0,)</versionRange>
+                                    <goals>
+                                        <goal>install-node-and-npm</goal>
+                                    </goals>
+                                </pluginExecutionFilter>
+                                <action>
+                                    <ignore />
+                                </action>
+                            </pluginExecution>
+                            <pluginExecution>
+                                <pluginExecutionFilter>
+                                    <groupId>com.github.eirslett</groupId>
+                                    <artifactId>frontend-maven-plugin</artifactId>
+                                    <versionRange>[0.0,)</versionRange>
+                                    <goals>
+                                        <goal>npm</goal>
+                                    </goals>
+                                </pluginExecutionFilter>
+                                <action>
+                                    <ignore />
+                                </action>
+                            </pluginExecution>
+                        </pluginExecutions>
+                    </lifecycleMappingMetadata>
+                </configuration>
+            </plugin>
+
+        </plugins>
+
+    </pluginManagement>
+        
     </build>
 
     <reporting>
