--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,14 @@
     </scm>
 
     <properties>
-        <java-version>1.7</java-version>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
         <jackson.version>2.5.4</jackson.version>
         <hadoop.version>2.6.0</hadoop.version>
         <hbase.version>1.0.0</hbase.version>
@@ -426,10 +433,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
             </plugin>
 
             <plugin>
